Fixed global img margin causing banner gap, update mobile banner v2.1

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,7 +18,7 @@
   width: 100%;
   height: 380px;
   object-fit: cover;
-  object-position: center;
+  object-position: center top;
   display: block;
 }
 
@@ -43,7 +43,7 @@
   }
 }
 
-@media (max-width: 560px) {
+@media (max-width: 620px) {
   .header__banner-image {
     height: 260px;
   }
